<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:id="@+id/txtAddTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTitleField"
        android:layout_below="@+id/txtAddTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_title_hint" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/urlField"
        android:layout_below="@+id/txtUrl"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_url_hint"
        android:inputType="textUri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_url"
        android:id="@+id/txtUrl"
        android:layout_below="@+id/addTitleField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/addButton"
        android:layout_below="@+id/urlField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Base.Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_clear_button"
        android:id="@+id/clearButton"
        android:layout_alignBottom="@+id/addButton"
        android:layout_toLeftOf="@+id/addButton"
        android:layout_toStartOf="@+id/addButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
</RelativeLayout>
